--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   transform: rotateY(180deg);
 }
 </style>
+
 		<title>經濟部落客-台中</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -88,8 +89,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>你對台中的認識有多少？</br>
-					製作人： <a href="https://www.facebook.com/ntpueconblogcompetition/">煜名、景智、梓瑋</a></h1>
+					<h1>你對台中的認識有多少？</h1>
+					<h2>製作人：煜名、景智、梓瑋</h2>
 					<ul class="actions">
 						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
 					</ul>
