--- a/templated-binary-test/index.html
+++ b/templated-binary-test/index.html
@@ -88,8 +88,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>你對台中的認識有多少？</br>
-					製作人： <a href="https://www.facebook.com/ntpueconblogcompetition/">煜名、景智、梓瑋</a></h1>
+					<h1 font color="black">你對台中的認識有多少？</br>
+					製作人： <a href="https://www.facebook.com/ntpueconblogcompetition/" color=black>煜名、景智、梓瑋</a></h1>
 					<ul class="actions">
 						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
 					</ul>
