調整最後一列

--- a/templated-binary-test/index.html
+++ b/templated-binary-test/index.html
@@ -23,6 +23,7 @@
 <!--add the responsive viewport meta tag-->
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--flip card css-->
+<!--載入字體-->
 <style>
 .card {
   margin: 10px 10px;
@@ -59,7 +60,12 @@
 .card-container:hover .card-flip {
   transform: rotateY(180deg);
 }
+
+}
+
 </style>
+
+
 		<title>經濟部落客-台中</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -195,6 +201,12 @@
 				</div>
 			</article>
 
+
+	<section class="wrapper style1">
+							<div class="inner">
+										<header class="align-center">
+											<h2>台中人 台中腔</h2>
+										</header>
 			<!--flip card-->
 			<div class="container">
 			  <div class="row">
@@ -203,10 +215,9 @@
 			       <div class="card-flip">
 			        <!-- Card 2 Front -->
 			        <div class="card front">
-			          <img src="images/煜名.jpg" class="card-img-top img-fluid">
+			          <img src="images/煜名.jpg" class="card-img-top img-fluid" >
 			          <div class="card-block">
-			            <h4 class="card-title">經濟二<br/>煜名</h4>
-			            <p class="card-text" >沙鹿人</p>
+			            <h4 class="card-title">經濟二<br/>煜名<br/>沙鹿人</h4>
 			          </div>
 			        </div>
 			        <!-- End Card 2 Front -->
@@ -218,7 +229,7 @@
 			          </div>
 			          <div class="card-block">
 			            <h4 class="card-title">感想</h4>
-			            <p class="card-text">對我來說，台中不僅是我的家鄉，同時有是我最喜愛的城市。儘管大學前往台北念書，也有很多機會接觸到台北市的繁華，但總是有種台北人步調太快的感覺，彷彿壓迫著自己。<br/>台中卻是個悠閒的好地方，不過卻因為空汙的問題讓我對台中心目中的分數打了點折扣。
+			            <p class="card-text">對我來說，台中不僅是我的家鄉，同時又是我最喜愛的城市。儘管大學前往台北念書，也有很多機會接觸到台北市的繁華，但總是有種台北人步調太快的感覺，彷彿壓迫著自己。<br/>台中卻是個悠閒的好地方，不過卻因為空汙的問題讓我對台中心目中的分數打了點折扣。
 								</p>
 			          </div>
 			        </div>
@@ -233,20 +244,19 @@
  			        <div class="card front">
  			          <img src="images/梓瑋.jpg" class="card-img-top img-fluid">
  			          <div class="card-block">
-									<h4 class="card-title">公行三<br/>梓瑋</h4>
-			            <p class="card-text" >??人</p>
+									<h4 class="card-title">公行三<br/>梓瑋<br/>南屯人</h4>
  			          </div>
  			        </div>
  			        <!-- End Card 2 Front -->
 
  			        <!-- Card 2 Back -->
  			        <div class="card back">
- 			          <div class="card-header">
- 			            Featured
- 			          </div>
+								<div class="card-header">
+			            <h4 class="card-title">梓瑋</h4>
+			          </div>
  			          <div class="card-block">
- 			            <h4 class="card-title">Special title treatment</h4>
- 			            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+ 			            <h4 class="card-title">感想</h4>
+ 			            <p class="card-text">每次從台北返家時，可以發現窗外天空的顏色從晴空萬里的藍，隨著接近市區後逐漸蒙上一層灰白，影響人民最直接的空氣品質我認為是台中最需改善的部分，若市府花更多心思做出實質上的改變，將帶給台市民最直接的感受。</p>
  			          </div>
  			        </div>
  			        <!-- End Card 2 Back -->
@@ -260,8 +270,7 @@
  			        <div class="card front">
  			          <img src="images/景智.jpg" class="card-img-top img-fluid">
  			          <div class="card-block">
-									<h4 class="card-title">不動四<br/>景智</h4>
-			            <p class="card-text" >北屯人</p>
+									<h4 class="card-title">不動四<br/>景智<br/>北屯人</h4>
  			          </div>
  			        </div>
  			        <!-- End Card 2C Front -->
@@ -269,11 +278,12 @@
  			        <!-- Card 2C Back -->
  			        <div class="card back">
  			          <div class="card-header">
- 			            Featured
+ 			           景智
  			          </div>
  			          <div class="card-block">
- 			            <h4 class="card-title">Special title treatment</h4>
- 			            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+ 			            <h4 class="card-title">感想</h4>
+ 			            <p class="card-text" text-align: left;>台中是我最熟悉的都市，也是我最喜歡的地方!在台北求學的四年間少了深入認識探索家鄉的機會，但這次藉著的競賽，讓我從空汙、財政等議題回頭去看看近些年台中的變化。
+									</p>
  			          </div>
  			        </div>
  			        <!-- End Card 2C Back -->
@@ -282,6 +292,9 @@
  					<!-- End Card 2C -->
 				</div>
 			</div>
+		</div>
+	</section>
+
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
