--- a/templated-binary-test/index.html
+++ b/templated-binary-test/index.html
@@ -277,12 +277,13 @@
 
  			        <!-- Card 2C Back -->
  			        <div class="card back">
- 			          <div class="card-header">
- 			           景智
- 			          </div>
+								<div class="card-header">
+			            <h4 class="card-title">景智</h4>
+			          </div>
  			          <div class="card-block">
  			            <h4 class="card-title">感想</h4>
- 			            <p class="card-text" text-align: left;>台中是我最熟悉的都市，也是我最喜歡的地方!在台北求學的四年間少了深入認識探索家鄉的機會，但這次藉著的競賽，讓我從空汙、財政等議題回頭去看看近些年台中的變化。
+ 			            <p class="card-text" text-align: left;>台中是我最熟悉的都市，也是我最喜歡的地方!在台北求學的四年間少了深入認識探索家鄉的機會，但這次藉著的競賽，讓我從空汙、財政等議題回頭去看看近些年台中的變化。<br/>
+										儘管台北有更加便利的生活，但我還是喜歡台中獨有的生活步調。希望未來空汙的問題能更加改善，讓台中成為真正宜居的都市!
 									</p>
  			          </div>
  			        </div>
